# osc-ringcon

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
res/en-US/: main.ftl
res/ja/: main.ftl
src/: agent.rs  internationalization.rs  joycon.rs  main.rs  messages.rs
