[package]
name = "osc-ringcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fluent-bundle = "0.15"
fluent-fallback = "0.6"
fluent-langneg = "0.13"
font-kit = "0.11"
futures = "0.3"
iced = { version = "0.4", features = ["tokio"] }
iced_native = "0.5.0"
image = { version = "0.24.2", default-features = false, features = ["png"] }
ipc-channel = { version = "0.16", features = ["async"] }
joycon-rs = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "sync"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
unic-langid = "0.9"

[dependencies.windows]
version = "0.36"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Globalization"
]

[build-dependencies]
winres = "0.1.12"
